README.md: Additional links to Adrew Ng lectures
library_requirements:
Libraries required for scvi-tools and pytorch

--- a/project_dnn/library_requirements.Rmd
+++ b/project_dnn/library_requirements.Rmd
@@ -76,6 +76,14 @@ import os
 import gseapy
 import seaborn
 import anndata
+import torch
+import statsmodels
+import scvi-tools
+import numba
+import pytables
+import leidenalg
+import skmisc
+
 ```
 
 
