--- a/project_dnn/library_requirements.Rmd
+++ b/project_dnn/library_requirements.Rmd
@@ -78,12 +78,11 @@ import seaborn
 import anndata
 import torch
 import statsmodels
-import scvi-tools
+import scvi
 import numba
 import pytables
 import leidenalg
 import skmisc
-
 ```
 
 
