updated readme and notebooks

--- a/project_omics/rpy2_interoperability_examples.ipynb
+++ b/project_omics/rpy2_interoperability_examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "quarterly-thunder",
+   "id": "smart-chemistry",
    "metadata": {},
    "source": [
     "# Python/R interoperability in Jupyter Notebooks"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "color-appearance",
+   "id": "drawn-easter",
    "metadata": {},
    "source": [
     "In this notebook, we demonstrate how to use functionalities in the [`rpy2`](https://rpy2.github.io/) package to use R code within python notebooks and we show examples for conversions between single-cell data object containers across languages."
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "exempt-montreal",
+   "id": "curious-decision",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accompanied-begin",
+   "id": "filled-stream",
    "metadata": {},
    "source": [
     "Let's set up `rpy2` to use R functions and chunks within this python notebook and conversion between `anndata` and `SingleCellExperiment` objects with [`anndata2ri`](https://github.com/theislab/anndata2ri). "
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "likely-service",
+   "id": "tired-opportunity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "weird-prior",
+   "id": "dress-religion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "colored-armenia",
+   "id": "welcome-montgomery",
    "metadata": {},
    "source": [
     "Let's start by loading one of our anndata objects"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "addressed-certification",
+   "id": "postal-sessions",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "silent-honduras",
+   "id": "architectural-haiti",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "nasty-pension",
+   "id": "least-crest",
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hourly-hacker",
+   "id": "historical-narrow",
    "metadata": {},
    "source": [
     "### Basic rpy2 extension usage\n",
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "critical-denial",
+   "id": "cardiovascular-stadium",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "defined-disposal",
+   "id": "premium-heart",
    "metadata": {},
    "source": [
     "We can move objects between python and R using the `-i` and `-o` options "
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "given-constitutional",
+   "id": "downtown-shelter",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "upset-judge",
+   "id": "incorporated-lawyer",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "organizational-program",
+   "id": "looking-letters",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "liquid-eugene",
+   "id": "tropical-customs",
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "compatible-ontario",
+   "id": "surface-elephant",
    "metadata": {},
    "source": [
     "### Converting AnnData to SingleCellExperiment\n",
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "modified-circulation",
+   "id": "unlikely-refund",
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "invisible-hanging",
+   "id": "therapeutic-advancement",
    "metadata": {},
    "source": [
     "...and back."
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "isolated-adams",
+   "id": "virgin-people",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "grand-phenomenon",
+   "id": "dimensional-intake",
    "metadata": {},
    "outputs": [
     {
@@ -866,18 +866,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indian-cliff",
+   "id": "dirty-absorption",
    "metadata": {},
    "source": [
     "**Troubleshooting:** sometimes `anndata2ri` and `rpy2` can throw cryptic errors. Often the issue is that some of your anndata slots contain objects of a type that is not recognized by rpy2 (i.e. something different from `pd.DataFrame` or `np.array` or `scipy.sparse.csr_matrix`). Often the culprits are the `adata.obsp` or `adata.uns` slots. Since these are not converted to SingleCellExperiment, the easiest solution is often to delete them before conversion"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "applicable-window",
+   "cell_type": "raw",
+   "id": "sealed-guatemala",
    "metadata": {},
-   "outputs": [],
    "source": [
     "adata2sce = adata.copy()\n",
     "del adata2sce.obsp[\"distances\"]\n",
@@ -886,11 +884,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "jewish-factory",
+   "cell_type": "raw",
+   "id": "perceived-conditions",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%%R -i adata2sce\n",
     "adata2sce"
@@ -898,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "democratic-wiring",
+   "id": "closing-portal",
    "metadata": {},
    "source": [
     "### Make Seurat object from anndata\n",
@@ -909,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "assured-update",
+   "id": "expensive-rough",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -920,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "purple-clarity",
+   "id": "southeast-people",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "earlier-character",
+   "id": "incomplete-ecology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "equipped-tiffany",
+   "id": "equipped-conversion",
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "forty-patent",
+   "id": "boolean-preference",
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "generic-sterling",
+   "id": "actual-consistency",
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1031,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incident-rebate",
+   "id": "intellectual-breathing",
+   "metadata": {},
+   "source": [
+    "**Troubleshooting:** if you get the following error:\n",
+    "```r\n",
+    "Error in as(object = x, Class = \"dgCMatrix\") : \n",
+    "  no method or default for coercing “dgRMatrix” to “dgCMatrix”\n",
+    "```\n",
+    "You might need to convert the sparse matrices in your anndata object to column-oriented sparse matrices before you convert to R"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "mature-relaxation",
+   "metadata": {},
+   "source": [
+    "import scipy \n",
+    "adata2sce.X = scipy.sparse.csr_matrix(adata2sce.X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "answering-heading",
    "metadata": {},
    "source": [
     "### More resources on interoperability\n",
